# QQuickStaticHelloWorld

./: CMakeLists.txt  QQuickStaticHelloWorld.js  Readme.md  index.html  main.cpp  main.qml
cmake/: FetchQtIosCMake.cmake  FetchQtWasmCMake.cmake
qml/: main.qml  qml.qrc
src/: main.cpp
